Last match alignment fixed

--- a/OatyStats/Oatylayout.css
+++ b/OatyStats/Oatylayout.css
@@ -119,6 +119,7 @@ body {
 	top: 750px;
 	left: 500px;
 	font-size: 50px;
+	width: 425px; 
 	text-align: center;
 	font-family: "Bold";
 	text-shadow: 
